packages/language/test/fixtures/projects/diagnostics/parse-errors/missing-equals.siren
# EL003 / EL002 — Missing '=' token in attribute
task my-task {
    description "missing equals sign"
}
